--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-smooth-dnd",
+  "name": "@xanter/vue-smooth-dnd",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,7 @@
     "preview": "vite preview",
     "build-only": "vite build && vue-tsc -p ./tsconfig.build.json --emitDeclarationOnly",
     "type-check": "vue-tsc -p ./tsconfig.build.json --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix"
   },
   "files": [
     "dist"
